.metadata/.plugins/org.eclipse.cdt.ui/sandbox.build.log
22:05:21 **** Incremental Build of configuration Debug for project sandbox ****
make all 
'Building file: ../Sources/main.c'
'Invoking: Cross ARM C Compiler'
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -D"CPU_MK64FN1M0VMD12" -I"../Sources" -I"../Project_Settings/Startup_Code" -I"../Includes" -I"../Includes/device" -I"C:\Freescale\MQX_KSDK_1.0.0/platform/CMSIS/Include" -I"C:\Freescale\MQX_KSDK_1.0.0/platform/utilities" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'InitMotorPWM':
../Sources/main.c:76:14: error: 'FTM1_MOD_VALUE' undeclared (first use in this function)
   FTM1_MOD = FTM1_MOD_VALUE; //Set the Modulo resister (16 bit available - bits 0-15), Mod is set to 24000
              ^
../Sources/main.c:76:14: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:95:3: warning: implicit declaration of function 'enable_irq' [-Wimplicit-function-declaration]
   enable_irq(63);  // (79-16) Set NVIC location, but you still have to change/check NVIC file sysinit.c under Project Settings Folder
   ^
../Sources/main.c: In function 'SetMotorPWM':
../Sources/main.c:101:44: error: 'FTM1_MOD_VALUE' undeclared (first use in this function)
    FTM1_C0V =(int)((DutyCycle*.01)* (float)FTM1_MOD_VALUE);
                                            ^
../Sources/main.c: In function 'MotorTick':
../Sources/main.c:107:5: error: 'MotorTickVar' undeclared (first use in this function)
 if (MotorTickVar < 0xff)//if motor tick less than 255 count up...
     ^
../Sources/main.c:112:4: error: 'LED_E2_TOGGLE' undeclared (first use in this function)
    LED_E2_TOGGLE; // ends up being ___ Hz (correct)
    ^
make: *** [Sources/main.o] Error 1

22:05:23 Build Finished (took 2s.186ms)

